first hm commit

--- a/app/views/layouts/_top_nav_menu.html.erb
+++ b/app/views/layouts/_top_nav_menu.html.erb
@@ -8,7 +8,7 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <a class="navbar-brand" href="#">身边买</a>
+    <a class="navbar-brand" href="#">家庭环境云监测</a>
   </div>
 
   <ul class="nav navbar-nav navbar-right">
