--- a/app/views/layouts/_top_nav_menu.html.erb
+++ b/app/views/layouts/_top_nav_menu.html.erb
@@ -19,8 +19,8 @@
       <li class="dropdown">
       <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= current_user.email %><b class="caret"></b></a>
       <ul class="dropdown-menu">
-        <li><a href="#">Action</a></li>
-        <li><a href="#">Another action</a></li>
+        <li><%= link_to "我的监测设备", devices_path %></li>
+        <li><%= link_to "添加监测设备", new_device_path %></li>
         <li><a href="#">Something else here</a></li>
         <li class="divider"></li>
         <li>
