--- a/app/views/layouts/_top_nav_menu.html.erb
+++ b/app/views/layouts/_top_nav_menu.html.erb
@@ -8,7 +8,7 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <a class="navbar-brand" href="#">家庭环境云监测</a>
+    <%= link_to "家庭环境云监测", root_path, class: "navbar-brand" %>
   </div>
 
   <ul class="nav navbar-nav navbar-right">
@@ -21,7 +21,6 @@
       <ul class="dropdown-menu">
         <li><%= link_to "我的监测设备", devices_path %></li>
         <li><%= link_to "添加监测设备", new_device_path %></li>
-        <li><a href="#">Something else here</a></li>
         <li class="divider"></li>
         <li>
         <%= link_to "退出", logout_path %>
