--- a/app/views/layouts/_top_nav_menu.html.erb
+++ b/app/views/layouts/_top_nav_menu.html.erb
@@ -1,22 +1,22 @@
-<nav class="navbar navbar-inverse navbar-static-top" role="navigation">
-<div class="container">
-  <!-- Brand and toggle get grouped for better mobile display -->
-  <div class="navbar-header">
-    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-      <span class="sr-only">Toggle navigation</span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-    </button>
-    <%= link_to "家庭环境云监测", root_path, class: "navbar-brand" %>
-  </div>
+<div class="navbar navbar-inverse navbar-static-top" role="navigation">
+  <div class="container">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <%= link_to "家庭环境云监测", root_path, class: "navbar-brand" %>
+    </div>
 
-  <ul class="nav navbar-nav navbar-right">
-    <% unless current_user %>
-      <li><a href="/signup">注册</a></li>
+    <ul class="nav navbar-nav navbar-right">
+      <% unless current_user %>
+        <li><a href="/signup">注册</a></li>
       <li><a href="/login">登录</a></li>
     <% else %>
-      <li class="dropdown">
+        <li class="dropdown">
       <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= current_user.email %><b class="caret"></b></a>
       <ul class="dropdown-menu">
         <li><%= link_to "我的监测设备", devices_path %></li>
@@ -28,7 +28,6 @@
       </ul>
       </li>
     <% end %>
-  </ul>
-</div><!-- /.navbar-collapse -->
+    </ul>
+  </div><!-- /.navbar-collapse -->
 </div>
-</nav>
