--- a/app/assets/stylesheets/bootstrap.css.scss
+++ b/app/assets/stylesheets/bootstrap.css.scss
@@ -308,6 +308,8 @@ body {
   line-height: 1.428571429;
   color: #333333;
   background-color: #ffffff;
+  background-image: image-url('background.png');
+  background-repeat: repeat;
 }
 
 input,
