--- a/app/views/devices/show.html.erb
+++ b/app/views/devices/show.html.erb
@@ -32,6 +32,9 @@
       <%= link_to "甲醛", "#", class: "list-group-item", onclick: "toggle_figures('formaldehyde', this)" %>
       <%= link_to "温度", "#", class: "list-group-item", onclick: "toggle_figures('temperature', this)" %>
     </div>
+    <div class="list-group">
+      <%= link_to "返回我的监测设备", devices_path, class: "list-group-item active" %>
+    </div>
   </div><!--/span-->
 </div><!--/row-->
 
