--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
           <a href="/feedbacks/new"><span class="glyphicon glyphicon-envelope" style="vertical-align: text-top;"></span> 意见反馈</a> ・ <a href="/about">关于</a> ・ <a href="/disclaimer">免责申明</a>
         </div>
         <div class="copyright footer-div">
-          Copyright © 2014-2016 身边买 版权所有 <span style="margin-left:5px"></span>
+          Copyright © 2014-2016 家庭环境云监测 版权所有 <span style="margin-left:5px"></span>
         </div>
       </div>
     </div>
