--- a/app/views/devices/show.html.erb
+++ b/app/views/devices/show.html.erb
@@ -1,5 +1,5 @@
 <div class="row row-offcanvas row-offcanvas-right">
-  <div class="col-xs-12 col-sm-9">
+  <div class="col-sm-9">
     <div class="panel panel-default">
       <div class="panel-heading">监测设备 <%= @device.alias %> 的数据：</div>
       <div class="panel-body">
@@ -26,7 +26,7 @@
     </div>
   </div>
 
-  <div class="col-xs-6 col-sm-3 sidebar-offcanvas" id="sidebar" role="navigation">
+  <div class="col-sm-3 sidebar-offcanvas" id="sidebar" role="navigation">
     <div class="list-group">
       <%= link_to "PM 2.5", "#", class: "list-group-item active", onclick: "toggle_figures('pm25', this)" %>
       <%= link_to "甲醛", "#", class: "list-group-item", onclick: "toggle_figures('formaldehyde', this)" %>
@@ -34,6 +34,28 @@
     </div>
     <div class="list-group">
       <%= link_to "返回我的监测设备", devices_path, class: "list-group-item active" %>
+    </div>
+
+    <div class="panel panel-default">
+      <div class="panel-heading">设备关注者：</div>
+      <div class="panel-body">
+        <ul>
+          <% if @device.watchers.empty? %>
+            <label>当前暂无关注者</label>
+          <% else %>
+            <% @device.watchers.each do |w| %>
+              <li>
+                <%= w.email %>
+                <% if current_user.id == @device.user_id %>
+                  <%= link_to watcher_path(w.id), method: :delete, data: { confirm: "确定删除？" } do %>
+                    <span class="glyphicon glyphicon-trash"></span>
+                  <% end %>
+                <% end %>
+              </li>
+            <% end %>
+          <% end %>
+        </ul>
+      </div>
     </div>
   </div><!--/span-->
 </div><!--/row-->
